<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <com.example.wellfed.common.RequiredTextInputLayout
        android:id="@+id/descriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:inputType="text" />

    </com.example.wellfed.common.RequiredTextInputLayout>


    <com.example.wellfed.common.RequiredDropdownTextInputLayout
        android:id="@+id/categoryInput"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInput"
        tools:layout_editor_absoluteX="0dp">

        <AutoCompleteTextView
            android:id="@+id/edit_categoryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:labelFor="@+id/edit_categoryInput" />
    </com.example.wellfed.common.RequiredDropdownTextInputLayout>

    <!-- Amount and Unit on the same line below categories half the width each -->

    <com.example.wellfed.common.RequiredNumberTextInputLayout
        android:id="@+id/amountInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/unitInput"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_amountInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal" />
    </com.example.wellfed.common.RequiredNumberTextInputLayout>

    <!-- Create a dropdown menu for the unit -->
    <com.example.wellfed.common.RequiredDropdownTextInputLayout
        android:id="@+id/unitInput"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/amountInput"
        app:layout_constraintTop_toBottomOf="@+id/categoryInput">

        <AutoCompleteTextView
            android:id="@+id/edit_unitInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unit" />
    </com.example.wellfed.common.RequiredDropdownTextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ingredient_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_baseline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>