<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="100dp"
    android:background="#F3EDF7">

    <!-- This XML will is a dropdown menu for the ingredients. -->
    <!-- It will be used in the ingredients page. -->
    <!-- It will have 3 options: -->
    <!-- 1. Sort by name -->
    <!-- 2. Sort by category -->
    <!-- 3. Sort by expiration date -->

    <TextView
        android:id="@+id/sort_by_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="bottom"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/sort_description"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sort_by_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/sort_by_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="bottom"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/sort_category"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sort_by_expiration_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_name"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/sort_by_expiration_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="bottom"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/sort_best_before"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBottomOf=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_category"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>